# gcp-cloud-run

./: app.py  build.sh  pyproject.toml
edge-function/: README.md  deploy.sh  env.example  index.js  package.json  test.js
src/: Dockerfile  app.py  build.sh  pyproject.toml
terraform/: .gitignore  README.md  cloud_function.tf  cloud_run.tf  cloud_sql.tf  dns.tf  load_balancer.tf  outputs.tf  plan.sh  variables.tf
